# GLaDOS

./: .gitignore  .gitmodules  README.md  TrainGLaDOS_NeMo.ipynb  TrainGLaDOS_TAO.ipynb  download_audio.py  requirements.txt
TrainNemo/: README.md  TrainGLaDOS_NeMo.ipynb  TrainWheatley_NeMo.ipynb  requirements.txt
glados_bringup/: CMakeLists.txt  package.xml
glados_bringup/launch/: arm.launch  bringup.launch  openai.launch  riva.launch  zed.launch
glados_bringup/params/: common.yaml  zed2i.yaml
glados_control/: CMakeLists.txt  package.xml
glados_control/scripts/: coordinator.py  watcher.py
glados_description/: CMakeLists.txt  package.xml
glados_description/launch/: description.launch
glados_description/meshes/: g_head.dae  g_mid.dae  g_upper.dae
glados_description/meshes/3DPrinting/Head/Mirror/: Brace1.stl  Brace2.stl  HeadDecorations.stl  HeadSide.stl  HeadSide_001.stl  Nubbin2.stl  Nubbin3.stl  Nubbin_B.stl  Nubbin_W.stl  SideGearingExtras.stl  SideGearingMain.stl  SideStructure.stl  SideStructure_001.stl  Strap1.stl
glados_description/meshes/3DPrinting/Head/Single/: Eye.stl  EyeLense.stl  EyeRing.stl  EyeSlot.stl  Neck.stl  Shell.stl  Shell_001.stl  Shell_002.stl  Strap2.stl
glados_description/meshes/3DPrinting/Midsection/Mirror/: Object_77_001.stl  Object_77_008.stl  Object_77_010.stl  Object_77_011.stl  Object_77_012.stl  Object_77_019.stl  Object_77_063.stl
glados_description/meshes/3DPrinting/Midsection/Single/: Circle.stl  Circle_001.stl  Circle_005.stl  Circle_006.stl  Forearm1.stl  Forearm2.stl  Forearm3.stl  HeadBoxM1.stl  HeadBoxM2.stl  MidBonusClip1.stl  MidBonusClip2.stl  MidBonusClip3.stl  Object_77_003.stl  Object_77_007.stl  Object_77_008.stl  Object_77_025.stl  Object_77_029.stl  Object_77_061.stl  Object_77_066.stl
glados_description/meshes/3DPrinting/Upper/Mirror/: Object_74.stl  Object_74_030.stl  Object_74_041.stl  Object_74_042.stl  Object_74_043.stl  Object_74_044.stl  UU_Main.stl  UU_Rib1.stl  UU_Rib2.stl  WingHigh.stl  WingLow.stl  WingMid.stl
glados_description/meshes/3DPrinting/Upper/Single/: Object_74_007.stl  Object_74_037.stl  Object_74_039.stl  UpperMount0.stl  UpperMount1.stl  UpperMount1_001.stl
glados_description/urdf/: glados.urdf.xacro
glados_riva/: CMakeLists.txt  package.xml
glados_riva/scripts/: glados_riva_discord.py  glados_talk.py  requirements.txt  transcribe_mic.py
glados_viz/: CMakeLists.txt  package.xml
glados_viz/launch/: view_model.launch  view_robot.launch
glados_viz/rviz/: model.rviz  robot.rviz
